--- a/javascript_1/styles.css
+++ b/javascript_1/styles.css
@@ -32,6 +32,8 @@ nav {
 .logo {
   font-size: 1.5rem;
   font-weight: bold;
+  align-items: center;
+  width: 80%;
 }
 
 .nav-links {
@@ -59,6 +61,7 @@ main {
   max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
+
 }
 
 .hero {
@@ -326,5 +329,15 @@ h2 {
   margin-top: 20px;
   font-size: 20px;
   color: #333;
+}
+
+.container{
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+.left section{
+  width: 25%;
 }
 
